Add scripts endpoint
