# main.go
@@ -18,6 +18,7 @@ import (
 	"github.com/eqlabs/flow-wallet-service/jobs"
 	"github.com/eqlabs/flow-wallet-service/keys"
 	"github.com/eqlabs/flow-wallet-service/keys/simple"
+	"github.com/eqlabs/flow-wallet-service/scripts"
 	"github.com/eqlabs/flow-wallet-service/transactions"
 	"github.com/gorilla/mux"
 	"github.com/joho/godotenv"
@@ -111,6 +112,7 @@ func runServer() {
 	jobsService := jobs.NewService(jobStore)
 	accountService := accounts.NewService(accountStore, km, fc, wp)
 	transactionService := transactions.NewService(transactionStore, km, fc, wp)
+	scriptsService := scripts.NewService(fc)
 
 	debugService := debug.Service{
 		RepoUrl:   "https://github.com/eqlabs/flow-wallet-service",
@@ -123,6 +125,7 @@ func runServer() {
 	jobsHandler := handlers.NewJobs(ls, jobsService)
 	accountsHandler := handlers.NewAccounts(ls, accountService)
 	transactions := handlers.NewTransactions(ls, transactionService)
+	scriptsHandler := handlers.NewScripts(ls, scriptsService)
 	// fungibleTokens := handlers.NewFungibleTokens(l, fc, db, km)
 
 	r := mux.NewRouter()
@@ -152,6 +155,9 @@ func runServer() {
 	} else {
 		ls.Println("raw transactions disabled")
 	}
+
+	// Scripts
+	rv.Handle("/scripts", scriptsHandler.Execute()).Methods(http.MethodPost) // create
 
 	// // Fungible tokens
 	// if !flgDisableFt {
